...

        <android.support.constraint.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@+id/relativeLayout"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.512"
            tools:layout_constraintBottom_creator="1"
...
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            tools:layout_constraintLeft_creator="1"
            tools:layout_constraintRight_creator="1">

            <LinearLayout
                android:id="@+id/email_password_fields"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="25dp">

                <EditText
                    android:id="@+id/field_email"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/hint_email"
                    android:inputType="textEmailAddress" />

                <EditText
                    android:id="@+id/field_password"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/hint_password"
                    android:inputType="textPassword" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/email_password_buttons"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/email_password_fields"
                android:orientation="horizontal"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="25dp">

                <Button
                    android:id="@+id/email_sign_in_button"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/sign_in" />

...
