<resources>
    <string name="app_name">Group Loop</string>
    <string name="title_activity_login_logout">Login Logout</string>
    <string name="title_activity_group_items">Chip Items</string>
    <string name="title_activity_schedule_item">Schedule Items</string>

    <string name="button_login_logout_logged_in">Preferences</string>
    <string name="button_login_logout_logged_in_no_email">Preferences/Verify Email</string>
    <string name="button_login_logout_logged_out">sign-in/sign-up</string>
    <string name="button_Logout">Logout</string>
    <string name="button_verify_email">Verify Email</string>
    <string name="button_notification_settings">Notification Settings</string>
    <string name="button_change_group">Change Group</string>

    <string name="button_chip_items">Chip Items</string>
    <string name="button_schedule_items">Schedule Demo</string>

    <string name="verify_email">Verify Email</string>

    <string name="label_emailpassword">Email/Password Authentication</string>
    <string name="desc_emailpassword">Use an email and password to authenticate with Firebase.</string>

    <string name="hint_user_id">User ID</string>
    <string name="get_custom_token">Get Token</string>
    <string name="sign_in">Sign In</string>
    <string name="create_account">Create Account</string>
    <string name="sign_out">Sign Out</string>

    <string name="disconnect">Disconnect</string>
    <string name="loading">Loading…</string>
    <string name="custom_token">Custom Token</string>
    <string name="signed_in">Signed In</string>
    <string name="signed_out">Signed Out</string>
    <string name="token_null">Token: null</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="desc_firebase_lockup">Firebase logo and name</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="start_phone_auth">Start</string>
    <string name="verify_phone_auth">Verify</string>
    <string name="resend_phone_auth">Resend</string>
    <string name="hint_phone_number">Phone Number</string>
    <string name="hint_verification_code">Verification Code</string>
    <string name="status_code_sent">Code Sent</string>
    <string name="status_verification_failed">Verification failed</string>
    <string name="status_verification_succeeded">Verification succeeded</string>
    <string name="status_sign_in_failed">Sign-in failed</string>
    <string name="instant_validation">(instant validation)</string>

    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="firebase_user_management">Firebase User Management</string>

    <string name="emailpassword_status_fmt">Email User: %1$s (verified: %2$b)</string>
    <string name="emailpassword_title_text">Email and Password</string>

    <string name="phone_title_text">Phone Number</string>

    <string name="firebaseui_status_fmt">Firebase User: %s</string>
    <string name="firebaseui_title_text">FirebaseUI Auth</string>

    <string name="id_fmt">User ID: %s</string>
    <string name="email_fmt">Email: %s</string>
    <string name="title_activity_chip_item">ChipItem</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_user_account">UserAccount</string>
</resources>
