...
                android:layout_marginBottom="8dp"
                android:background="@color/test"
                android:columnCount="2"
                android:orientation="horizontal"
                android:paddingLeft="20dp"
                android:rowCount="4"
                app:layout_constraintBottom_toTopOf="@+id/constraintLayout2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/textView26"
...
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="46dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    android:paddingBottom="0dp"
                    app:srcCompat="@drawable/simple_line"
                    app:layout_constraintBottom_toTopOf="@+id/pref_change_add_group_button"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.501"
                    app:layout_constraintStart_toStartOf="parent" />

                <Button
                    android:id="@+id/pref_notification_settings_button"
...
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="46dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    android:paddingBottom="0dp"
                    app:srcCompat="@drawable/simple_line"
                    app:layout_constraintBottom_toTopOf="@+id/pref_login_button"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.501"
                    app:layout_constraintStart_toStartOf="parent" />

                <Button
                    android:id="@+id/pref_change_add_group_button"
...
